[maratona-jsf] - 04 - Expression Language - Introducão

--- a/maratona-jsf/src/main/webapp/index.xhtml
+++ b/maratona-jsf/src/main/webapp/index.xhtml
@@ -11,7 +11,8 @@
 </h:head>
 
 <h:body>
-	<h2>Index.xhtml</h2>
+    <h:outputLabel value="#{estudanteRegistrarBean.nome}" /> <br />
+    <h:outputLabel value="#{estudanteRegistrarBean.sobrenome}" />
 </h:body>
 
 </html>
