[maratona-jsf] - Escopos: RequestScoped

--- a/maratona-jsf/src/main/webapp/index2.xhtml
+++ b/maratona-jsf/src/main/webapp/index2.xhtml
@@ -14,7 +14,7 @@
 <h:body>
 
     <h:outputLabel value="UHUUL! Chegamos!" /> <br />
-    
+    <h:outputText value="#{testeRequestBean.personagemSelecionado}" /> <br />
 </h:body>
 
 </html>
