--- a/maratona-jsf/src/main/webapp/session.xhtml
+++ b/maratona-jsf/src/main/webapp/session.xhtml
@@ -13,6 +13,8 @@
 
 <h:body>
     <h:form>
+        <h:outputText value="#{testeApplicationBean.categoriaList}" /> <br/>
+        
         <h:outputText value="#{testeSessionBean.personagemSelecionado}" /> <br/>
         <h:commandButton actionListener="#{testeSessionBean.selecionarPersonagem()}" 
             value="Selecionar Personagem" /> <br />
