--- a/maratona-jsf/src/main/webapp/session2.xhtml
+++ b/maratona-jsf/src/main/webapp/session2.xhtml
@@ -12,6 +12,8 @@
 </h:head>
 
 <h:body>
+    <h:outputText value="#{testeApplicationBean.categoriaList}" /> <br/>
+    
     <h:outputLabel value="Pegando valor do Session Bean" /> <br />
     <h:outputText value="#{testeSessionBean.personagemSelecionado}" /> <br />
 </h:body>
