--- a/maratona-jsf/src/main/webapp/view.xhtml
+++ b/maratona-jsf/src/main/webapp/view.xhtml
@@ -13,6 +13,8 @@
 
 <h:body>
     <h:form>
+        <h:outputText value="#{testeApplicationBean.categoriaList}" /> <br/>
+    
         <h:outputText value="#{testeViewBean.personagemSelecionado}" /> <br/>
         <h:commandButton actionListener="#{testeViewBean.selecionarPersonagem()}" 
             value="Selecionar Personagem" /> <br />
